<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_favorite_type_of_job"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/prefer_spinner"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:entries="@array/job_prefer_entries"
            android:prompt="@string/type_of_job"
            android:spinnerMode="dialog"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/updateFinishButton"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="60dp"
            android:text="Update"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>