<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.SignupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="359dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Registration"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:width="200dp"
            android:hint="Username"
            android:minHeight="48dp"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:width="200dp"
            android:hint="Password"
            android:minHeight="48dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Select a Role:"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/identitySpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:minHeight="40dp"
            android:outlineProvider="none"
            android:soundEffectsEnabled="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="Register"
            android:textSize="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>