<resources>
    <string name="app_name">Quick Cash</string>
    <string name="EMPTY_USERNAME_OR_PASSWORD">Please enter the username and/or password</string>
    <string name="INVALID_PASSWORD">The password must be between 8 and 16 digits long and must contain at least three types of the following: uppercase, lowercase, numbers and special symbols</string>
    <string name="INVALID_USERNAME">The length of the username needs to be between 6 and 16 bits and cannot contain special characters.</string>
    <string name="USER_ALREADY_EXISTS">This user already exists. Please enter another username.</string>
    <string name="USER_DOES_NOT_EXIST">That user does not exist.</string>
    <string name="INCORRECT_PASSWORD">Incorrect password. Please try again.</string>
    <string name="EMPTY_STRING"></string>
    <string name="type_of_job"></string>
    <string name="DATABASE_URL">https://quick-cash-ca106-default-rtdb.firebaseio.com</string>
    <string name="DATABASE_ERROR">Error in connecting to database</string>
...
